--- a/projeto_final/pre_processamento_final.ipynb
+++ b/projeto_final/pre_processamento_final.ipynb
@@ -5883,7 +5883,6 @@
     "\\log(x) & \\text{se } x > 0 \\\\\n",
     "0 & \\text{se } x = 0 \\\\\n",
     "\\log(|x|) * -1 & \\text{se } x \\leq 0 \n",
-    "\n",
     "\\end{cases} $$\n"
    ]
   },
@@ -9474,7 +9473,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `Criando Variavel de Endividamento`"
+    "#### `Criando Variavel de Endividamento`\n",
+    "\n",
+    "O Índice de Endividamento Geral é um dos indicadores financeiros mais básicos utilizados na análise de endividamento da empresa.\n",
+    "\n",
+    "Ele determina a proporção do endividamento da empresa em comparação com o total do seu ativo. Em outras palavras, o quanto dos ativos do negócio estão financiados por terceiros.\n",
+    "\n",
+    "O seu cálculo é feito ao dividir o total da dívida de curto e de longo prazo pelo total do ativo.\n",
+    "\n",
+    "EG = (Capital de terceiros/ Ativos totais)"
    ]
   },
   {
@@ -10117,7 +10124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `Criando variavel debt_equity`"
+    "#### `Criando variavel debt_equity`\n",
+    "\n",
+    "O índice Debt-to-equity é utilizado para avaliar a alavancagem financeira de uma empresa e é calculado dividindo as obrigações totais da empresa pelo seu patrimônio líquido. O índice é uma métrica importante em finanças corporativas. É uma medida do grau em que uma empresa está financiando suas operações com dívida em vez de recursos próprios."
    ]
   },
   {
@@ -11784,7 +11793,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -11798,10 +11807,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
