--- a/projeto_final/modelagem_final.Rmd
+++ b/projeto_final/modelagem_final.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "modelagem_final"
-author: "Murilo Cechin"
+author: "Murilo Cechin, Marcello Caron, Mariana Aukar"
 date: "2023-09-12"
 output: html_document
 ---
@@ -18,9 +18,7 @@ O grupo selecionou os seguintes algoritimos para realizar a modelagem de classif
 - XGboost
 
 
-## Bibliotecas utilizadas no projeto
-
-```{r}
+```{r include=FALSE}
 library(tidyverse)
 library(rsample)
 library(glmnet)
@@ -28,17 +26,20 @@ library(ranger)
 library(pROC)
 library(class)
 library(caret)
+library(Matrix)
+library(xgboost)
+library(yardstick)
 ```
 
 ## Importando arquivo
 
 ```{r}
-df_final = read.csv("D:/Usuário/Documents/MeusProjetos/insper_integrador_09_2023/projeto_final/df_final.csv")
+df_final = read.csv('df_final.csv')
 
 head(df_final, 10)
 ```
 
-Antes de proceguir com a modelagem é necessario retirar algumas colunas deste dataframe. Como a coluna X, que representa o index do pré-processamento em python e a coluna comp_id que apenas fornece o código da empresa.
+Antes de prosseguir com a modelagem é necessario retirar algumas colunas deste dataframe. Como a coluna X, que representa o index do pré-processamento em python e a coluna comp_id que apenas fornece o código da empresa.
 
 ```{r}
 df_final$X <- NULL
@@ -49,7 +50,7 @@ df_final$comp_id <- NULL
 ```
 
 ```{r}
-df_final
+head(df_final, 10)
 ```
 
 
@@ -57,7 +58,7 @@ df_final
 ### Colunas com log 
   Todas as colunas nomeadas com "_log" no final foram processadas utilizando a escala logaritimica de acordo com a seguinte regra:
 
-  $$ \text{"coluna"\_log}(x) = 
+  $$ \text{coluna_log}(x) = 
 \begin{cases} 
 \log(x) & \text{se } x > 0 \\
 0 & \text{se } x = 0 \\
@@ -97,7 +98,7 @@ head(sapply(df_final$profit_loss_year_log, back_log), 10)
 
 Separando os conjuntos de teste e treinamento.
 
-Antes, vamos analisar se o cojunto de dados esta desbalanceado.
+Antes, vamos analisar se o cojunto de dados está desbalanceado.
 
 ```{r}
 # Analise das frequencia
@@ -109,7 +110,9 @@ df_final %>%
 
 ```
 
-Percebemos que a base de dados apresenta um desbalanceamento significativo, com somente 4% das empresas sendo classificadas como inativas. Devido a essa disparidade, a métrica de acurácia pode não oferecer uma visão completa do desempenho do modelo. Por isso, optaremos pela Sensibilidade como métrica principal, pois ela indica a proporção de verdadeiros positivos que foram corretamente identificados.
+Percebemos que a base de dados apresenta um desbalanceamento significativo, com somente 14% das empresas sendo classificadas como inativas. Devido a essa disparidade, a métrica de acurácia pode não oferecer uma visão completa do desempenho do modelo. Por isso, optaremos pela Area Under the Curve (AUC) como métrica principal, pois ela faz um balanço entre Sensibilidade e Especificidade.
+
+A AUC é menos sensível a desequilíbrio de classes do que algumas outras métricas, como a acurácia. Em problemas onde as classes estão desequilibradas, a AUC pode oferecer uma avaliação mais confiável do desempenho do modelo.
 
 Para dividir os conjuntos de treinamento e teste, vamos adotar uma amostragem estratificada, de forma a preservar a proporção da variável alvo.
 
@@ -128,18 +131,17 @@ conj_treinamento <- training(splits)
 conj_teste <- testing(splits)
 ```
 
+Conferindo proporção do conjunto de teste
 
 ```{r}
-# Conferindo proporção do conjunto de teste
 conj_teste %>%
   group_by(target) %>%
   summarise(freq_absoluta = n()) %>%
   mutate(freq_relativa = (freq_absoluta / sum(freq_absoluta))*100)
 ```
-
+Conferindo conjunto de treinamento
 
 ```{r}
-# Conferindo conjunto de treinamento
 conj_treinamento %>%
   group_by(target) %>%
   summarise(freq_absoluta = n()) %>%
@@ -149,8 +151,6 @@ conj_treinamento %>%
 Como pode ser obsevado , a estratificação funcionou.
 
 ### Criando Tabela de comparação
-
-Além da métrica de sensibilidade, também será analisada a AUC para obter uma visão geral do desempenho do modelo.
 
 
 ```{r}
@@ -169,35 +169,33 @@ tb_metricas
 Criando modelagem com algoritmo random forest.
 
 ```{r}
-random <- ranger(target ~., data=conj_treinamento)
+random <- ranger(target ~ ., data=conj_treinamento, probability = TRUE)
 
 print(random)
 ```
+AUC para Random Forest pré-otimização de hiperparâmetros
 
 ```{r}
 teste_random = predict(random, conj_teste)
 
-probs_numeric <- as.numeric(as.character(teste_random$predictions)) - 1
+probs_numeric <- as.numeric(as.character(teste_random$predictions[,2]))
 labels_numeric <- as.numeric(as.character(conj_teste$target))
 
 roc_obj <- roc(labels_numeric, probs_numeric)
+
 auc_random <- auc(roc_obj)
 
 auc_random
 ```
-```{r}
-tb_metricas
-```
 
-
-Otimizando os hiperparametros de n_trees e Mtry.
+Otimizando os hiperparâmetros de n_trees e Mtry.
 
 ```{r}
 # Buscando um número otimo de n_trees
 random_ntree <- tibble(n_arvores = c(1:15, seq(25, 300, 25)), erro = NA)
 
 random_ntree <- random_ntree %>%
-  mutate(erro = map_dbl(n_arvores, ~ranger(target ~ ., num.trees = .x, data=conj_treinamento)$prediction.error))
+  mutate(erro = map_dbl(n_arvores, ~ranger(target ~ ., num.trees = .x, data=conj_treinamento, probability = TRUE)$prediction.error))
 
 random_ntree %>% 
   ggplot(aes(n_arvores, erro)) + 
@@ -208,15 +206,16 @@ random_ntree %>%
 ```
 
 
-Analisando o gráfico gerado, iremos testar entre 50 e 200 árvores.
+Analisando o gráfico gerado, iremos testar entre 50 e 250 árvores.
 
 ```{r}
 # Otimizando o mtry e o número de árvores.
 resultados <- crossing(mtry = c(4, 8, 10, 15, 20, 25, 30), 
-                       n_arvores = c(1, 5, 10, seq(50, 200, 25)))
+                       n_arvores = c(seq(50, 250, 25)))
 
 ajusta <- function(mtry, n_arvores) {
-   random <- ranger(target ~ ., num.trees = n_arvores, mtry = mtry, data = conj_treinamento)
+   set.seed(123)
+   random <- ranger(target ~ ., num.trees = n_arvores, mtry = mtry, data = conj_treinamento, probability = TRUE)
    return(random$prediction.error)
 }
 
@@ -242,11 +241,11 @@ Analisando resultados com os menores erros:
 resultados %>%
   arrange(erro)
 ```
-A árvore otimizada será com mtry=4 e n_arvores = 100.
+A árvore otimizada será com mtry = 4 e n_arvores = 250.
 ```{r}
 conj_treinamento$target <- as.factor(conj_treinamento$target)
 
-random_final <- ranger(target ~., data=conj_treinamento, num.trees = 100, mtry=4)
+random_final <- ranger(target ~., data=conj_treinamento, num.trees = 250, mtry=4, probability = TRUE)
 
 print(random_final)
 ```
@@ -257,16 +256,16 @@ Realizando predição no conjunto de teste
 predicoes_random <- predict(random_final, data = conj_teste)
 
 # Probabilidades da classe positiva 
-probs_random <- predicoes_random$predictions
+probs_random <- factor(ifelse(predicoes_random$predictions[,2] > 0.5, 1, 0))
 
 # Matriz de confusão e sensibilidade
-confusion_random <- confusionMatrix(data=probs_random, reference = as.factor(conj_teste$target), positive='1')
+confusion_random <- caret::confusionMatrix(data=probs_random, reference = as.factor(conj_teste$target), positive='1')
 
 confusion_random
 ```
 Obtendo a AUC:
 ```{r}
-probs_numeric <- as.numeric(as.character(predicoes_random$predictions)) - 1
+probs_numeric <- as.numeric(as.character(predicoes_random$predictions[,2]))
 labels_numeric <- as.numeric(as.character(conj_teste$target))
 
 roc_obj <- roc(labels_numeric, probs_numeric)
@@ -299,6 +298,20 @@ Cálculando as probabilidades
 ```{r}
 prob_log <- predict(reg_logistica, conj_teste, type = "response")
 ```
+
+Matriz de confusão
+
+```{r}
+
+class_log <- ifelse(prob_log > 0.5, 1, 0) 
+
+# Matriz de confusão e sensibilidade
+confusion_reglog <- caret::confusionMatrix(data=factor(class_log), reference = as.factor(conj_teste$target), positive='1')
+
+confusion_reglog
+```
+
+
 
 Cálculando métrica AUC
 
@@ -356,8 +369,12 @@ predicoes_class <- ifelse(predicoes_prob > 0.5, 1, 0)
 
 Cálculando a matriz de confusão
 ```{r}
-table(Observed = conj_teste$target, Predicted = predicoes_class)
+# Matriz de confusão
+confusion_ridge <- caret::confusionMatrix(data=factor(predicoes_class), reference = as.factor(conj_teste$target), positive='1')
+
+confusion_ridge
 ```
+
 Obtendo a métrica AUC:
 
 ```{r}
@@ -373,11 +390,147 @@ tb_metricas
 ```
 
 
+### XGBoost
+
+Treinando o modelo e obtendo a métrica AUC
+
+```{r}
+tr_sparse_matrix <- sparse.model.matrix(target ~ ., data = conj_treinamento)[,-1]
+
+d_tr <- xgb.DMatrix(label = as.numeric(as.character(conj_treinamento$target)), 
+                    data = tr_sparse_matrix)
+
+xgb_model <- xgboost(data = d_tr, nrounds = 500, max_depth = 4, 
+                      eta = 0.1, nthread = 3, verbose = FALSE,
+                      objective = "binary:logistic")
+
+test_sparse_matrix <- sparse.model.matrix(target ~ ., data = conj_teste)[,-1]
+
+d_test <- xgb.DMatrix(label = conj_teste$target, data = test_sparse_matrix)
+
+pred_xgb <- predict(xgb_model, d_test)
+
+desempenho <- tibble(prob = pred_xgb, 
+                     classes = conj_teste$target, 
+                     metodo = "xgboost")
+
+xgb_auc <- desempenho %>% 
+  mutate(classes = factor(classes)) %>% 
+  group_by(metodo) %>% 
+  roc_auc(classes, prob, event_level = "second") %>% 
+  arrange(desc(.estimate))
+
+```
+
+Otimizando os hiperparâmetros
+
+```{r}
+set.seed(234)
+
+hiperparametros <- crossing(eta = c(.01, .1), 
+                            nrounds = c(250, 750), 
+                            max_depth = c(1, 4, 8))
 
 
 
 
+ajusta_bst <- function(eta, nrounds, max_depth) {
+  
+  
+  fit <- xgb.train(data = d_tr, nrounds = nrounds, max_depth = max_depth, eta = eta, 
+                   nthread = 10, verbose = FALSE, objective = "binary:logistic")
+  
+  pred_xgb <- predict(fit, d_test)
 
+  desempenho <- tibble(prob = pred_xgb, 
+                     classes = conj_teste$target, 
+                     metodo = "xgboost")
+
+  return(desempenho %>% 
+  mutate(classes = factor(classes)) %>% 
+  group_by(metodo) %>% 
+  roc_auc(classes, prob, event_level = "second") %>% 
+  arrange(desc(.estimate)) %>% pull(.estimate))
+  
+  
+}
+
+
+resultados <- 
+  crossing(hiperparametros) %>% 
+  mutate(auc = pmap_dbl(list(eta, nrounds, max_depth), ajusta_bst))
+
+resultados %>% arrange(desc(auc))
+```
+
+Aplicando melhores hiperparâmetros
+
+```{r}
+xgb_model <- xgboost(data = d_tr, nrounds = 250, max_depth = 4, 
+                      eta = 0.1, nthread = 10, verbose = FALSE,
+                      objective = "binary:logistic")
+
+pred_xgb <- predict(xgb_model, d_test)
+
+desempenho <- tibble(prob = pred_xgb, 
+                     classes = conj_teste$target, 
+                     metodo = "xgboost")
+
+xgb_auc <- desempenho %>% 
+  mutate(classes = factor(classes)) %>% 
+  group_by(metodo) %>% 
+  roc_auc(classes, prob, event_level = "second") %>% 
+  arrange(desc(.estimate))
+
+xgb_auc
+```
+Adicionando resposta em tabela de comparação
+
+```{r}
+tb_metricas$AUC[tb_metricas$modelo == "XGboost"] = xgb_auc$.estimate
+
+tb_metricas
+
+```
+
+### Selecionamos o modelo com o melhor AUC, que foi o XGBoost.
+
+Agora iremos entender a importância das variáveis e selecionar o melhor threshold.
+
+Plotando feature importance
+
+```{r}
+importancia <- xgb.importance(model = xgb_model)
+
+xgb.plot.importance(importancia, rel_to_first = TRUE, xlab = "Relative Importance", top_n = 10)
+```
+
+Buscando todos os thresholds possíveis
+
+```{r}
+desempenho %>% 
+  mutate(classes = factor(classes)) %>% 
+  group_by(metodo) %>% 
+  roc_curve(classes, prob, event_level = "second")
+
+```
+
+Selecionando o melhor threshold e plotando a matriz de confusão final
+
+```{r}
+df_threshold <- desempenho %>% 
+  mutate(classes = factor(classes)) %>% 
+  group_by(metodo) %>% 
+  roc_curve(classes, prob, event_level = "second")
+
+gmeans <- sqrt(df_threshold$sensitivity * df_threshold$specificity)
+
+(ideal_threshold <- df_threshold[which.max(gmeans),]$.threshold)
+
+pred_ <- as.factor(ifelse(predict(xgb_model, d_test, type="response")>=ideal_threshold,"1","0"))
+
+caret::confusionMatrix(data=pred_, reference = factor(conj_teste$target), positive='1')
+```
 
 
 
